# wasmer-as

./: Cargo.toml
