[package]
name = "wasmer-as"
version = "0.4.1-alpha.0"
authors = ["Andrey Kuznetsov <fear@loathing.in>"]
edition = "2018"
license = "Apache-2.0"
description = "Helpers to read and write memory in AssemblyScript wasm modules executing in wasmer-runtime"
keywords = ["assemblyscript", "assembly-script", "wasm", "wasmer"]
homepage = "https://github.com/onsails/wasmer-as"
documentation = "https://github.com/onsails/wasmer-as"
repository = "https://github.com/onsails/wasmer-as"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = { git = "https://github.com/wasmerio/wasmer",  rev = "327192c2aece56beefbe0583ba0b2ec230c7be18", package = "wasmer" }

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
wasmer = { git = "https://github.com/wasmerio/wasmer",  rev = "327192c2aece56beefbe0583ba0b2ec230c7be18", package = "wasmer" }
